30-applications/kuma/extras/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
      annotations:
        k8up.io/backupcommand: sh -c 'mariadb-dump --single-transaction --socket=/app/data/run/mariadb.sock kuma'
        k8up.io/file-extension: .sql
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2.5.5
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            limits:
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptime-kuma-data
